--- a/style.css
+++ b/style.css
@@ -113,3 +113,14 @@ h1 {
   color: var(--text-color);
   text-decoration: underline;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
